--- a/OttawaStreetCameras/OttawaStreetCameras.csproj
+++ b/OttawaStreetCameras/OttawaStreetCameras.csproj
@@ -91,6 +91,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <Content Include="Assets\ic_photo_camera_white_48dp_2x.png" />
     <Content Include="Assets\ints.json" />
+    <None Include="Assets\camera_list.json" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
