--- a/OttawaStreetCameras/OttawaStreetCameras.csproj
+++ b/OttawaStreetCameras/OttawaStreetCameras.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.17134.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.14393.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -90,6 +90,13 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Content Include="Assets\baseline_close_white_24.png" />
+    <Content Include="Assets\baseline_photo_camera_white_24.png" />
+    <Content Include="Assets\baseline_shuffle_white_24.png" />
+    <Content Include="Assets\baseline_star_border_white_24.png" />
+    <Content Include="Assets\baseline_star_white_24.png" />
+    <Content Include="Assets\baseline_visibility_off_white_24.png" />
+    <Content Include="Assets\baseline_visibility_white_24.png" />
     <Content Include="Assets\ic_photo_camera_white_48dp_2x.png" />
   </ItemGroup>
   <ItemGroup>
@@ -97,9 +104,6 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="BilingualObject.cs" />
-    <Compile Include="MapView.xaml.cs">
-      <DependentUpon>MapView.xaml</DependentUpon>
-    </Compile>
     <Compile Include="CameraItem.xaml.cs">
       <DependentUpon>CameraItem.xaml</DependentUpon>
     </Compile>
@@ -121,6 +125,8 @@
     <None Include="OttawaStreetCameras_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\ic_select_all_white_24dp.png" />
+    <Content Include="Assets\ic_swap_horiz_white_24dp.png" />
     <Content Include="Assets\NewStoreLogo.scale-100.png" />
     <Content Include="Assets\NewStoreLogo.scale-125.png" />
     <Content Include="Assets\NewStoreLogo.scale-150.png" />
@@ -176,10 +182,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MapView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="CameraItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
